<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context="${relativePackage}.${activityClass}" >

    <EditText
        android:id="@+id/txt_beer_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/beer_name"
        android:inputType="text"
        android:textAppearance="?android:attr/textAppearance"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/txt_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/txt_beer_name"
        android:hint="@string/description"
        android:inputType="text"
        android:textAppearance="?android:attr/textAppearance"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/txt_abv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_description"
        android:layout_marginTop="8dp"
        android:hint="@string/abv"
        android:inputType="text"
        android:lines="2"
        android:maxLines="2"
        android:textAppearance="?android:attr/textAppearance"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/txt_review"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_abv"
        android:layout_marginTop="8dp"
        android:hint="@string/review"
        android:inputType="textEmailAddress"
        android:textAppearance="?android:attr/textAppearance"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/txt_rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_review"
        android:layout_marginTop="8dp"
        android:hint="@string/rating"
        android:inputType="phone"
        android:textAppearance="?android:attr/textAppearance"
        android:textColor="@android:color/black" />


    <Spinner
        android:id="@+id/spinner_categories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_rating"
        android:layout_marginTop="8dp"
        android:prompt="@string/select_a_category"
        android:animateLayoutChanges="true"
        android:spinnerMode="dropdown" />

    <Button
        android:id="@+id/btn_add_review_to_DB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner_categories"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:paddingBottom="2dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="2dp"
        android:text="@string/add"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>